Updated color themes and fixed issues on mobile devices

--- a/style.css
+++ b/style.css
@@ -1,18 +1,47 @@
 /* colors */
 
 :root {
-    --keyboard-bg-color: #D5BCA2;
+    --keyboard-bg-color: #00c3b3;
     --key-bg-color: #353535;
-    --key-color: #f5f5f5;
-    --lock-on-color: #A46F5E;
+    --key-color: #FDF6FF;
+    --lock-on-color: #00AE94;
     --font: 'Varela Round', sans-serif;
+}
+
+
+/* Track */
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 0px;
+    /*to hide x-axis scroll bar since overflow is visible*/
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.6);
+    -webkit-box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+}
+
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgb(0, 137, 150);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(0, 137, 150, 0.7);
 }
 
 body {
     padding: 0;
     margin: 0;
-    overflow: auto;
-    background-color: #E4E4E4;
+    background-color: #f5f5f5;
     min-height: 100vh;
     display: grid;
     grid-template-rows: 1fr auto;
@@ -20,13 +49,13 @@ body {
 }
 
  ::selection {
-    background-color: #4EE8AD;
-    color: #17261D;
+    background-color: #5b5b5b;
+    color: #fff;
 }
 
  ::-moz-selection {
-    background-color: #4EE8AD;
-    color: #17261D;
+    background-color: #5b5b5b;
+    color: #fff;
 }
 
 * {
@@ -35,7 +64,7 @@ body {
 }
 
 .light-off {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.8) !important;
 }
 
 
@@ -163,7 +192,7 @@ i.underscore {
 }
 
 .lock {
-    margin: 5px 20px;
+    margin: 5px 22px;
     width: 135px;
 }
 
@@ -196,6 +225,7 @@ i.underscore {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     justify-content: center;
+    overflow-x: auto;
 }
 
 .row {
@@ -248,9 +278,8 @@ i.underscore {
 
 .button:hover {
     cursor: pointer;
-    background-color: #00AE94;
-    border-color: #00AE94;
-    color: #f5f5f5;
+    background-color: #5b5b5b;
+    color: #fff;
     transition: all 0.3s ease-in-out;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
